@@ -107,7 +107,7 @@ dnl Autodetect what to build if not specified
 
 dnl Databases - which to include.
 if test -z "$DB_MODULES"; then
-    DB_MODULES="textdb rfc822db"
+    DB_MODULES="textdb rfc822db stack"
 
     AC_CHECK_LIB(mysqlclient, mysql_init, DB_MODULES="$DB_MODULES mysql", echo "*** Cannot build mysql database ***")
 fi
