@@ -16,6 +16,9 @@ cdebconf (0.75) UNRELEASED; urgency=low
     - If possible, clean source directory in 'debian/rules clean' so that
       test builds don't make it into source packages.
     - cdebconf-udeb provides debconf-2.0.
+    - Enable stack driver.
+    - Move answers to password questions out of
+      /var/lib/cdebconf/questions.dat to /var/lib/cdebconf/passwords.dat.
   * Joey Hess
     - Apply patch from Denis to fix rfc822db to not output empty Value fields
       if the value is not set. Closes: #257180
